added nav classes to header

--- a/html_theme-template/theme/style.css
+++ b/html_theme-template/theme/style.css
@@ -2,7 +2,7 @@
 Theme Name: Classic Ace
 Theme URI: https://nikharpandya.com/classic-ace
 Author: Nikhar Pandya
-Author URI: https:/nikharpandya.com
+Author URI: https://nikharpandya.com/
 Description: A classic theme that displays my experinece on  developing WordPress classic themes
 Tags: Classic-theme, php, bootstrap.
 Version: 0.1
